# Greenscale

./: README.md  pyproject.toml
.github/workflows/: ci.yml  ruff-fix.yml
docs/: PRIVATE_IMPLEMENTATIONS.md  REDACTION_POLICY.md  architecture.md
sample_data/: synth_test.npz  synth_train.npz
scripts/: batch_processing.py  create_masks.py  download_data.py  evaluate_masks.py  generate_demo_data.py  run_workflow.py  train.py  transform_masks.py
sql/: tables.sql
src/: balance_sheet_extractor.py  cash_flow_statement_extractor.py  image_recognition.py  pdf_extractor.py  sample code.py
src/finance/: cash_flow_statement_extractor.py
src/greenscale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/image_analysis/: batch_processing.py  binarization.py  config.py  create_masks.py  datasets.py  evaluate_masks.py  generate_demo_data.py  huberloss_function.py  metrics.py  pipeline.py  predict.py  projections.py  train.py  weight_function.py
src/image_analysis/losses/: adaptive_wing_loss.py  bce_dice_loss.py  combined_loss.py  distance_transform_loss.py  focal_tversky_loss.py  huberloss_function.py  soft_cl_dice_loss.py
src/imgrec/: adapters_npz.py  cli.py  interfaces.py  metrics.py  models.py  pipeline.py  preprocess.py
tests/: apply_advanced_binarizations.py  calculate_segmentation_metrics.py  test_calculate_segmentation_metrics.py  test_demo_pipeline_run.py  test_pipeline.py
