[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greenscale"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas",
  "opencv-python",
  "scipy",
  "scikit-image",
  "torch",
  "tensorflow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
