[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greenscale"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
    "opencv-python>=4.10",
    "matplotlib>=3.9",
    "pillow>=11.0",
    "torch>=2.7",
    "torchvision>=0.22",
    "scikit-image",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 88
target-version = ["py311"]
